# git1file

./: README.md  cli.py  pyproject.toml
git1file/: analyzer.py  config.py  file_processor.py  git_service.py  main.py
git1file/formatters/: json_formatter.py  plain_formatter.py  xml_formatter.py
git1file/models/: __init__.py  schemas.py
git1file/ui/static/css/: style.css
git1file/ui/static/js/: app.js
git1file/ui/templates/: index.html
